cert-manager/example-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
  labels:
    app: nginx-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - image: nginx
          name: nginx-1
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-1-service
spec:
  selector:
    app: nginx-1
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
    - host: example.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-1-service
                port:
                  number: 80
  tls:
    - hosts:
        - example.k8s
      secretName: example-com-tls
